# ConsoleC

./: .gitattributes  BASIC_GUIDE.md  CMakeLists.txt  HOW_TO_MAKE_UI_USE_ConsoleC.md  README.md
example/: main_buffer_test.c  main_draw_app.c  main_input_test.c  main_inventory_app.c
include/: console_c.h
include/console_c/: cc_buffer.h  cc_color.h  cc_device.h  cc_screen.h  cc_util.h
src/: cc_buffer.c  cc_color.c  cc_device.c  cc_screen.c  cc_util.c
